--- a/style.css
+++ b/style.css
@@ -219,17 +219,13 @@ footer{
 }
 
 @media only screen and (max-width: 480px) {
+
   .container{
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    justify-content: center;
     display: inline;
     }
 
-    .column{
-      width: 80%;
-
+    .column {
+      width: 445px;
     }
 
     header{
